<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_gray_050"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:padding="5dp"
            android:src="@drawable/app_name_2"
            android:contentDescription="@string/logo_app"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:background="#fafafa">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/faculdade_medicina_usp"
                android:contentDescription="@string/logo_medicine_usp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:src="@drawable/medicina_social"
                android:contentDescription="@string/logo_medicine_social"/>

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton"
            android:hint="@string/login_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>
